# VectorVertex

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.sh  imgui.ini  main.cpp  premake5.lua
.cache/clangd/index/: Assert.h.C3C2432D52F24CE0.idx  Base.h.A43FA9069C00F878.idx  Log.h.8B5F3211DFC10996.idx  imconfig.h.B5A8484213B8902E.idx  imgui.h.B7E92897250DC9AD.idx  imgui_demo.cpp.3F57FC1B29118940.idx  imgui_impl_glfw.cpp.F6BC491F1F57B0BA.idx  imgui_impl_glfw.h.9975EB82AB4A3F62.idx  imgui_internal.h.DFF8F9A8CFBBEF83.idx  imgui_widgets.cpp.586A5F316917054B.idx  imstb_textedit.h.C4378E6137EEF4A5.idx  vv_buffer.cpp.8F06131584ACBBF9.idx  vv_buffer.hpp.82F366CC656C054E.idx  vv_device.hpp.227FDD1BA45DF047.idx  vv_image.cpp.1E5F3D8899D18847.idx  vv_image.hpp.18F493F204C596F8.idx  vv_renderer.cpp.B8CC894717EDC91C.idx  vv_renderer.hpp.07155A48EA51A59F.idx  vv_swap_chain.hpp.337A957E16504688.idx  vv_window.hpp.4D12988E3BA50E94.idx
Editor/: Application.cpp  Application.hpp  CMakeLists.txt  Makefile  premake5.lua
Editor/Events/: KeyEvent.hpp  MouseEvent.hpp
Editor/Layers/: Editor_Layer.cpp  Editor_Layer.hpp  Imgui_Layer.hpp
Editor/Scene/: SceneSerializer.cpp
Editor/src/: Editor.cpp  EditorCamera.hpp  SceneSerializer.cpp  main.cpp
Editor/src/Layers/: Editor_Layer.cpp  Editor_Layer.hpp  Imgui_Layer.cpp  Imgui_Layer.hpp
Editor/src/Panels/: SceneHierarchy.cpp  SceneHierarchy.hpp
Engine/: CMakeLists.txt
Engine/src/Core/: Application.cpp  Application.hpp  Base.h  Event.hpp  Input.hpp  KeyCodes.hpp  Layer.h  LayerStack.h  Log.cpp  Log.h  MouseCodes.hpp  UUID.cpp  UUID.hpp  Utils.hpp  vvpch.hpp
Engine/src/Core/Math/: Math.cpp
Engine/src/Core/Utils/: PlattformUtils.hpp
Engine/src/Events/: ApplicationEvent.hpp  KeyEvent.hpp  MouseEvent.hpp
Engine/src/Plattform/: WindowInputs.cpp
Engine/src/Plattform/Linux/: LinuxWindow.cpp
Engine/src/Plattform/Vulkan/: VulkanRendererSystem.cpp.bak  VulkanRendererSystem.hpp.bak  vk_api_data.cpp  vk_api_data.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_camera.cpp  vk_context.cpp  vk_context.hpp  vk_descriptors.cpp  vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_frame_info.hpp  vk_framebuffer.cpp  vk_framebuffer.hpp  vk_image.cpp  vk_model.cpp  vk_model.hpp  vk_offscreen.cpp  vk_offscreen.hpp  vk_offscreen_render.cpp.bak  vk_offscreen_render.hpp.bak  vk_pipeline.cpp  vk_pipeline.hpp  vk_render_system.cpp  vk_render_system.hpp  vk_renderer.cpp  vk_renderer.hpp  vk_renderer_api.cpp  vk_renderer_api.hpp  vk_swap_chain.cpp  vk_swap_chain.hpp  vk_texture.cpp  vk_texture.hpp  vk_window.cpp
Engine/src/Plattform/Vulkan/Render_Systems/: prev_mesh_render_system.cpp.bak  prev_mesh_render_system.hpp.bak  prev_point_light_system.cpp.bak  prev_point_light_system.hpp.bak  vk_light_render_system.cpp  vk_light_render_system.hpp  vk_mesh_render_system.cpp  vk_mesh_render_system.hpp
Engine/src/Render/: Buffer.cpp  Buffer.hpp  Camera.hpp  Flags.hpp  FrameBuffer.cpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.hpp  RenderCommand.hpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
Engine/src/Scene/: EditorCamera.cpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Resources/Models/: Rubik.fbx  tank.gltf
Resources/Models/VintageCar/: VintageRacingCar.mtl
Resources/Models/supra/: supra_a80.mtl
Resources/Shaders/: default copy.frag.bak  default.frag  default.frag.spv  default.vert  default.vert.spv  default_lit.frag.not_compiling  offscreen.vert  offscreen.vert.spv  point_light.frag  point_light.frag.spv  point_light.vert  point_light.vert.spv
Resources/assets/scene/: VintageCar.vscene
VectorVertex/: Makefile  premake5.lua
VectorVertex/src/: VectorVertex.h  vvpch.cpp  vvpch.hpp
VectorVertex/src/Core/: Application.cpp  Application.hpp  Base.h  Components.hpp  EntryPoint.hpp  KeyCodes.hpp  Keyboard_inputs.hpp  Layer.cpp  Layer.h  LayerStack.cpp  Log.cpp  Log.h  MouseCodes.hpp
VectorVertex/src/Plattform/: WindowInputs.cpp
VectorVertex/src/Render/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.cpp  Material.hpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Window.cpp  Window.hpp
assets/scene/: Sponza.vscene  Temple.vscene  VintageCar.vscene
ninja_builds/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
src/: vv_descriptors_dynamic.cpp.aigen  vv_descriptors_dynamic.hpp.aigen
src/Core/: Assert.h  Base.h  Components.hpp  Input.hpp  KeyCodes.hpp  Keyboard_inputs.cpp  Keyboard_inputs.hpp  Layer.h  LayerStack.h  Log.cpp  Log.h  MainApp.cpp  MainApp.hpp  UUID.hpp  VectorVertex.cpp  VectorVertex.hpp  vv_utils.hpp  vv_uuid.cpp  vv_uuid.hpp
src/Core/Math/: Math.hpp
src/Core/Panels/: SceneHierarchy.cpp  SceneHierarchy.hpp
src/Core/Scene/: EditorCamera.hpp  Entity.hpp  Scene.cpp  Scene.hpp  SceneSerializer.cpp  SceneSerializer.hpp
src/Core/Utils/: PlattformUtils.cpp  PlattformUtils.hpp
src/Plattform/: WindowInputs.cpp
src/Plattform/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
src/Plattform/Vulkan/: VulkanRendererSystem.cpp  VulkanRendererSystem.hpp.bak  vk_api_data.cpp  vk_api_data.hpp  vk_buffer.cpp  vk_buffer.hpp  vk_camera.cpp  vk_camera.hpp  vk_context.cpp  (+35 more)
src/Render/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  VulkanRendererSystem.cpp  VulkanRendererSystem.hpp  Window.cpp  Window.hpp  lve_buffer.hpp  lve_camera.cpp  lve_camera.hpp  lve_descriptors.cpp  lve_descriptors.hpp  lve_device.cpp  lve_frame_info.hpp  lve_game_object.cpp  lve_game_object.hpp  lve_model.cpp  lve_model.hpp  lve_pipeline.cpp  lve_pipeline.hpp  lve_renderer.cpp  lve_renderer.hpp  lve_swap_chain.cpp  lve_swap_chain.hpp  lve_window.cpp  lve_window.hpp  vv_buffer.cpp  vv_buffer.hpp  (+34 more)
src/VectorVertex/: Application.cpp  Application.hpp  Components.hpp
(+119 files in other folders)
